заменил dayRevenue на revenueForBonus
в строке 4257 бонус рассчитывается как (dayRevenue * bonusPercent / 100). Здесь используется dayRevenue (общая выручка за день) вместо revenueForBonus (выручка для бонуса с вычетом за ведущую).
Мне нужно заменить dayRevenue на revenueForBonus в этой строке, чтобы бонус основного администратора рассчитывался правильно.

--- a/index.html
+++ b/index.html
@@ -4253,7 +4253,7 @@
         
         // Расчет бонуса основного администратора
         const bonusPercent = helperAdmin ? 8 : 15;
-        const bonus = (dayRevenue * bonusPercent / 100).toFixed(0);
+        const bonus = (revenueForBonus * bonusPercent / 100).toFixed(0);
         const totalSalary = (500 + parseFloat(bonus)).toFixed(0);
         
         adminInfoHTML += `
