--- a/index.html
+++ b/index.html
@@ -724,6 +724,8 @@
       color: #1d1d1f !important;
     }
   </style>
+  <script src="calculations.js"></script>
+  <script src="modal_handlers.js"></script>
 </head>
 <body>
   <!-- Форма входа -->
@@ -1434,13 +1436,15 @@
   </div>
 
   <!-- Модальное окно с деталями администраторов за день -->
-  <div id="adminDayDetailsModal" class="fixed inset-0 bg-white bg-opacity-90 flex items-center justify-center p-6 hidden z-50" onclick="event.target === this && this.classList.add('hidden')">
-    <div class="bg-white rounded-3xl shadow-2xl max-w-2xl w-full max-h-[90vh] overflow-y-auto p-8 relative ring-1 ring-gray-200" onclick="event.stopPropagation()">
-      <button id="closeAdminDayDetailsModal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 text-3xl font-thin leading-none focus:outline-none focus:ring-2 focus:ring-blue-500 rounded-full w-10 h-10 flex items-center justify-center" aria-label="Закрыть модальное окно">&times;</button>
-      <h3 class="text-2xl font-semibold mb-6 text-center text-gray-900 tracking-tight" id="adminDayDetailsTitle">Информация о смене</h3>
-      <div id="adminDayDetailsContent" class="space-y-4">
-        <!-- Детали о смене и зарплате будут добавлены сюда -->
-      </div>
+  <div id="adminDayDetailsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden">
+    <div class="relative top-20 mx-auto p-5 border w-11/12 md:w-4/5 lg:w-3/4 shadow-lg rounded-md bg-white">
+        <div class="flex justify-between items-center mb-4">
+            <h3 id="adminDayDetailsTitle" class="text-2xl font-bold text-gray-900"></h3>
+            <button id="closeAdminDayDetailsModal" class="text-gray-400 hover:text-gray-500">
+                <i class="fas fa-times text-xl"></i>
+            </button>
+        </div>
+        <div id="adminDayDetailsContent" class="mt-4"></div>
     </div>
   </div>
 
