fix: исправлен расчет общей выручки за день

--- a/index.html
+++ b/index.html
@@ -4237,7 +4237,7 @@
         }
         
         // Добавляем в общую выручку за день
-        dayRevenue += booking.totalAmount || 0;
+        dayRevenue += parseFloat(booking.amount || 0);
       });
 
       // Создаем HTML для отображения информации
