обновил логику расчета заработной платы в финансовой сводке
Я обновил логику расчета заработной платы в финансовой сводке. Теперь:
Для дней без дня рождения (когда birthdayRevenue = 0):
Основной админ получает: 500₽ + (общая выручка × 15%)
В вашем примере 5 июня: 500₽ + (1300₽ × 15%) = 695₽
Для дней с днем рождения (когда birthdayRevenue > 0):
Основной админ получает: 500₽ + ((выручка ДР - ведущая + другие услуги) × 15%)
В вашем примере 3 июня: 500₽ + ((13000₽ - 1000₽ + 1000₽) × 15%) = 2450₽
Также я исправил расчет бонуса помощника, чтобы он тоже учитывал вычет стоимости ведущей из выручки ДР.
Теперь финансовая сводка должна показывать правильную сумму 695₽ для 5 июня.

--- a/index.html
+++ b/index.html
@@ -4475,10 +4475,17 @@
             <span class="font-bold text-green-800 text-lg">
               ${(
                 // Зарплата основного: ставка + бонус
-                (mainAdmin ? 500 + (birthdayRevenue * (helperAdmin ? 0.08 : 0.15)) : 0) + 
+                (mainAdmin ? 500 + (
+                  // Если есть день рождения, считаем от (выручка ДР - ведущая + другие услуги)
+                  // Если нет дня рождения, считаем от общей выручки
+                  (birthdayRevenue > 0 ? 
+                    ((birthdayRevenue - (hostessRevenue || 0) + (otherServicesRevenue || 0)) * (helperAdmin ? 0.08 : 0.15)) :
+                    (dayRevenue * (helperAdmin ? 0.08 : 0.15))
+                  )
+                ) : 0) + 
                 // Зарплата помощника: почасовая + бонус от ДР
                 (helperAdmin && actualHelperHours > 0 ? 
-                  (actualHelperHours * 150) + (birthdayRevenue * 0.07) : 0)
+                  (actualHelperHours * 150) + ((birthdayRevenue - (hostessRevenue || 0)) * 0.07) : 0)
               ).toFixed(0).toLocaleString('ru-RU')} ₽
             </span>
           </div>
