обновил логику расчета бонуса для основного администратора
Я обновил логику расчета бонуса для основного администратора. Теперь:
Если в этот день есть день рождения (birthdayRevenue > 0):
Бонус считается от: (выручка ДР - стоимость ведущей + выручка от других услуг)
Где выручка от других услуг = общая выручка - выручка ДР
Если в этот день нет дня рождения:
Бонус считается от всей выручки за день
Для 5 июня:
Общая выручка: 1300₽ (PS5: 300₽ + VR: 1000₽)
Нет дня рождения, поэтому бонус = 1300₽ × 15% = 195₽
Итого: 500₽ (ставка) + 195₽ (бонус) = 695₽
Теперь эта сумма должна правильно отображаться и в дневном отчете, и в месячном отчете.

--- a/index.html
+++ b/index.html
@@ -2867,7 +2867,13 @@
                           const basePay = 500; // Фиксированная ставка за смену
                           adminData.baseSalary += basePay;
                           const bonusPercent = assignment.helperAdminId ? 0.08 : 0.15;
-                          const bonusRevenue = birthdayRevenue - hostessRevenue;
+                          
+                          // Если есть день рождения, считаем от (выручка ДР - ведущая + другие услуги)
+                          // Если нет дня рождения, считаем от общей выручки
+                          const bonusRevenue = birthdayRevenue > 0 ? 
+                            (birthdayRevenue - hostessRevenue + (dayRevenue - birthdayRevenue)) : 
+                            dayRevenue;
+                            
                           const bonus = bonusRevenue * bonusPercent;
                           adminData.bonusSalary += bonus;
                           adminData.totalSalary += basePay + bonus;
@@ -2876,8 +2882,8 @@
                               date: dateStr,
                               type: 'Основная смена',
                               base: basePay,
-                              bonus: bonus, // Сохраняем бонус, посчитанный от правильной выручки
-                              revenue: dayRevenue, // Сохраняем выручку дня после скидок
+                              bonus: bonus,
+                              revenue: dayRevenue,
                               hours: 0
                           });
                       }
