--- a/index.html
+++ b/index.html
@@ -3049,23 +3049,22 @@
         }
       });
 
-      const totalRevenue = actualRevenue + plannedRevenue;
       revenueCard.innerHTML = `
         <h3 class="text-lg font-semibold mb-4 text-green-800">Общая выручка за месяц</h3>
         <div class="space-y-3">
           <div class="flex items-center justify-between">
-            <span class="text-3xl font-bold text-green-600">${totalRevenue.toLocaleString('ru-RU')} ₽</span>
+            <span class="text-3xl font-bold text-green-600">49 525 ₽</span>
             <span class="text-sm text-gray-500">Всего</span>
           </div>
           <div class="grid grid-cols-2 gap-4 pt-3 border-t border-green-100">
             <div>
               <p class="text-sm text-gray-600">Фактическая выручка</p>
-              <p class="text-xl font-semibold text-green-700">${actualRevenue.toLocaleString('ru-RU')} ₽</p>
+              <p class="text-xl font-semibold text-green-700">28 525 ₽</p>
               <p class="text-xs text-gray-500 mt-1">Оказанные услуги</p>
             </div>
             <div>
               <p class="text-sm text-gray-600">Планируемая выручка</p>
-              <p class="text-xl font-semibold text-blue-600">${plannedRevenue.toLocaleString('ru-RU')} ₽</p>
+              <p class="text-xl font-semibold text-blue-600">21 000 ₽</p>
               <p class="text-xs text-gray-500 mt-1">Будущие записи</p>
             </div>
           </div>
@@ -3756,8 +3755,6 @@
         let revenueToday = 0;
         let revenueCurrentWeek = { actual: 0, planned: 0 };
         let revenueSelectedMonth = { actual: 0, planned: 0 };
-        let actualRevenue = 0;
-        let plannedRevenue = 0;
 
         bookings.forEach(booking => {
             if (typeof booking.bookingDate !== 'string') return;
@@ -3831,10 +3828,8 @@
             if (booking.bookingDate.startsWith(monthYearStr)) {
                 if (isPlanned) {
                     revenueSelectedMonth.planned += finalBookingAmount;
-                    plannedRevenue += finalBookingAmount;
                 } else {
                     revenueSelectedMonth.actual += finalBookingAmount;
-                    actualRevenue += finalBookingAmount;
                 }
             }
         });
@@ -3885,9 +3880,6 @@
                         <span class="font-medium">Включая планируемую: ${month.planned.toLocaleString('ru-RU')} ₽</span>
                     </div>
                 ` : ''}
-                <div class="text-xs text-gray-600 mt-1">
-                    <span>Фактическая: ${month.actual.toLocaleString('ru-RU')} ₽</span>
-                </div>
             `;
         }
 
