--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
 
         <!-- ЕЖЕНЕДЕЛЬНЫЙ РАСЧЕТ К ВЫПЛАТЕ -->
         <div class="mb-8 p-6 bg-yellow-50 border border-yellow-200 rounded-2xl">
-            <h4 class="font-semibold text-base mb-3 text-yellow-900">К выплате в этот понедельник (за прошлую неделю):</h4>
+            <h4 class="font-semibold text-base mb-3 text-yellow-900">К выплате в следующий понедельник (за текущую неделю):</h4>
             <p id="weeklyPayrollPeriod" class="text-xs text-yellow-700 mb-3"></p>
             <div id="weeklyPayrollResults" class="space-y-2 text-sm">
                 <p class="italic text-yellow-600">Расчет...</p>
@@ -3909,9 +3909,9 @@
     // === Расчет Зарплаты за Прошлую Неделю ===
     function calculateWeeklyPayroll() {
         const today = new Date();
-        const previousWeek = getPreviousWeekRange(today);
-        const prevWeekStartStr = formatDateSafe(previousWeek.start);
-        const prevWeekEndStr = formatDateSafe(previousWeek.end);
+        const currentWeek = getWeekRange(today);
+        const weekStartStr = formatDateSafe(currentWeek.start);
+        const weekEndStr = formatDateSafe(currentWeek.end);
 
         const weeklyPayrollData = {}; // { adminId: { name: 'Name', total: 0 } }
 
@@ -3920,26 +3920,26 @@
             weeklyPayrollData[admin.id] = { name: admin.name, total: 0 };
         });
 
-        // 2. Фильтруем назначения и бронирования за прошлую неделю
-        const prevWeekAssignments = adminAssignments.filter(a =>
-            typeof a.date === 'string' && a.date >= prevWeekStartStr && a.date <= prevWeekEndStr
+        // 2. Фильтруем назначения и бронирования за текущую неделю
+        const weekAssignments = adminAssignments.filter(a =>
+            typeof a.date === 'string' && a.date >= weekStartStr && a.date <= weekEndStr
         );
 
-        const prevWeekBookingsByDate = {};
+        const weekBookingsByDate = {};
         bookings.forEach(booking => {
-             if (typeof booking.bookingDate === 'string' && booking.bookingDate >= prevWeekStartStr && booking.bookingDate <= prevWeekEndStr) {
+             if (typeof booking.bookingDate === 'string' && booking.bookingDate >= weekStartStr && booking.bookingDate <= weekEndStr) {
                 const dateStr = booking.bookingDate;
-                if (!prevWeekBookingsByDate[dateStr]) {
-                    prevWeekBookingsByDate[dateStr] = [];
+                if (!weekBookingsByDate[dateStr]) {
+                    weekBookingsByDate[dateStr] = [];
                 }
-                prevWeekBookingsByDate[dateStr].push(booking);
+                weekBookingsByDate[dateStr].push(booking);
              }
         });
 
-         // 3. Расчет ЗП за прошлую неделю
-         prevWeekAssignments.forEach(assignment => {
+         // 3. Расчет ЗП за текущую неделю
+         weekAssignments.forEach(assignment => {
             const dateStr = assignment.date;
-            const dayBookings = prevWeekBookingsByDate[dateStr] || [];
+            const dayBookings = weekBookingsByDate[dateStr] || [];
             let dayRevenue = 0; // Итоговая выручка дня ПОСЛЕ скидок
             let birthdayRevenue = 0; // Выручка только от ДР
             let hostessRevenue = 0; // Выручка от услуги ведущей
@@ -4065,7 +4065,7 @@
             }
          });
 
-        renderWeeklyPayroll(weeklyPayrollData, previousWeek);
+        renderWeeklyPayroll(weeklyPayrollData, currentWeek);
     }
 
 
