--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
 </div>
 
   <!-- Основной интерфейс -->
-  <header class="bg-white/50 shadow-md sticky top-0 z-30 backdrop-blur-md">
+  <header class="bg-white/60 shadow-md sticky top-0 z-30 backdrop-blur-md">
     <div class="max-w-7xl mx-auto px-6 py-5 flex flex-col md:flex-row md:items-center md:justify-between">
       <h1 class="text-3xl font-semibold tracking-tight text-gray-900 select-none" style="font-weight: 600;">VR Lounge - Управление</h1>
       <div class="flex items-center space-x-4 mt-2 md:mt-0">
@@ -871,6 +871,16 @@
         </div>
         <!-- КОНЕЦ СТАТИСТИКИ ВЫРУЧКИ -->
 
+
+        <!-- СЕГОДНЯ К ВЫПЛАТЕ (показывается только в понедельник) -->
+        <div id="todayPayrollBlock" class="mb-8 p-6 bg-green-50 border border-green-200 rounded-2xl hidden">
+            <h4 class="font-semibold text-base mb-3 text-green-900">Сегодня к выплате:</h4>
+            <p id="todayPayrollPeriod" class="text-xs text-green-700 mb-3"></p>
+            <div id="todayPayrollResults" class="space-y-2 text-sm">
+                <!-- Результаты сегодняшних выплат -->
+            </div>
+        </div>
+        <!-- КОНЕЦ БЛОКА СЕГОДНЯШНИХ ВЫПЛАТ -->
 
         <!-- ЕЖЕНЕДЕЛЬНЫЙ РАСЧЕТ К ВЫПЛАТЕ -->
         <div class="mb-8 p-6 bg-yellow-50 border border-yellow-200 rounded-2xl">
@@ -2826,7 +2836,7 @@
                    }
                  });
                           } else if (booking.serviceType) { // Обратная совместимость со старым полем
-                               // Логика расчета суммы ДО скидки по старому полю serviceType
+                               // Логика расчета суммы ДО скидки по старому полю
                                // ... (логика расчета bookingRevenue по serviceType остается той же, но присваиваем в bookingTotalAmount) ...
                                console.warn('Using legacy serviceType for monthly salary calculation (calculating pre-discount amount)', booking);
                                if (booking.serviceType === 'birthday') {
@@ -2855,6 +2865,8 @@
                            // Если это День Рождения, добавляем в birthdayRevenue
                            if (isBirthdayService) {
                                birthdayRevenue += finalBookingAmount;
+                           } else {
+                               otherServicesRevenue += finalBookingAmount;
                            }
                       });
 
@@ -2871,7 +2883,7 @@
                           // Если есть день рождения, считаем от (выручка ДР - ведущая + другие услуги)
                           // Если нет дня рождения, считаем от общей выручки
                           const bonusRevenue = birthdayRevenue > 0 ? 
-                            (birthdayRevenue - hostessRevenue + (dayRevenue - birthdayRevenue)) : 
+                            (birthdayRevenue - hostessRevenue + otherServicesRevenue) : 
                             dayRevenue;
                             
                           const bonus = bonusRevenue * bonusPercent;
@@ -2884,6 +2896,9 @@
                               base: basePay,
                               bonus: bonus,
                               revenue: dayRevenue,
+                              birthdayRevenue: birthdayRevenue,
+                              hostessRevenue: hostessRevenue,
+                              otherServicesRevenue: otherServicesRevenue,
                               hours: 0
                           });
                       }
@@ -3913,6 +3928,17 @@
         const weekStartStr = formatDateSafe(currentWeek.start);
         const weekEndStr = formatDateSafe(currentWeek.end);
 
+        // Если сегодня понедельник, показываем выплаты за прошлую неделю
+        if (isMonday(today)) {
+            const prevWeek = getPreviousWeekRange(today);
+            const prevWeekStartStr = formatDateSafe(prevWeek.start);
+            const prevWeekEndStr = formatDateSafe(prevWeek.end);
+            calculateTodayPayroll(prevWeekStartStr, prevWeekEndStr);
+        } else {
+            // Скрываем блок выплат за прошлую неделю
+            document.getElementById('todayPayrollBlock').classList.add('hidden');
+        }
+
         const weeklyPayrollData = {}; // { adminId: { name: 'Name', total: 0 } }
 
         // 1. Инициализация данных
@@ -4074,6 +4100,26 @@
         const nextMonday = new Date(date);
         nextMonday.setDate(nextMonday.getDate() + (8 - nextMonday.getDay()) % 7);
         return nextMonday;
+    }
+
+    // Функция для получения даты предыдущего понедельника
+    function getPreviousMonday(date) {
+        const prevMonday = new Date(date);
+        prevMonday.setDate(prevMonday.getDate() - ((prevMonday.getDay() + 6) % 7));
+        return prevMonday;
+    }
+
+    // Функция для получения диапазона предыдущей недели
+    function getPreviousWeekRange(date) {
+        const prevMonday = getPreviousMonday(date);
+        const prevSunday = new Date(prevMonday);
+        prevSunday.setDate(prevMonday.getDate() + 6);
+        return { start: prevMonday, end: prevSunday };
+    }
+
+    // Функция проверки, является ли сегодня понедельником
+    function isMonday(date) {
+        return date.getDay() === 1;
     }
 
     // === Отображение Зарплаты за Текущую Неделю ===
